@@ -2358,3 +2358,5 @@
 20071203 ay.c: add #include <string.h> for memset prototype (Fred).
 20071203 sound/alsasound.c: increase NUM_FRAMES to avoid buffer underruns
 	 (Stuart).
+20071203 sound/alsasound.c: set avail_min to 1/2 of period_size and fix
+	 reading of ALSA options (fixes bug #1750603) (Gergely Szasz).
